# nbd

./: .gitignore  Makefile.am  auth.c  auth.h  cliserv.c  cliserv.h  configure.ac  nbd-client.8.sgml  nbd-client.c  nbd-log.h  nbd-server.1.sgml  nbd-server.5.sgml  nbd-server.c  nbd-tester-client.c  sha2.c  sha2.h  simple_test
lib/: Makefile.am  libnbd.h  nbd.h  nbd_client_clear.c  nbd_client_disconnect.c  nbd_client_do.c  nbd_client_finish_sock.c  nbd_client_negotiate.c  nbd_client_set_timeout.c  nbd_client_setsizes.c  nbd_server_loop.c  nbd_server_negotiate_new_style.c  nbd_server_negotiate_old_style.c
